--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Slideshow</title>
     <style>
       * {
-        cursor: url("cursor.svg"), url("cursor.png"), default !important;
+        cursor: url("cursor.png"), url("cursor.svg"), default !important;
       }
     </style>
   </head>
